--- a/LaBuilderApp/Views/PageBuilder.xaml
+++ b/LaBuilderApp/Views/PageBuilder.xaml
@@ -7,17 +7,17 @@
 			<StackLayout Orientation="Vertical" VerticalOptions="StartAndExpand">
 				<Grid HorizontalOptions="Fill" ColumnSpacing="0" RowSpacing="0">
 			        <Grid.ColumnDefinitions>
-			            <ColumnDefinition Width="150*"/>
-			            <ColumnDefinition Width="6"/>
 			            <ColumnDefinition Width="40*"/>
+			            <ColumnDefinition Width="6"/>
+			            <ColumnDefinition Width="150*"/>
 			        </Grid.ColumnDefinitions>
 			        <Grid.RowDefinitions>
 			        	<RowDefinition Height="40" />
 			        	<!--<RowDefinition Height="*" />-->
 			        </Grid.RowDefinitions>
 					<!-- 1ere ligne -->
-					<local:AppearingText TheText="Builder" HorizontalOptions="Center" />
-					<Image x:Name="imgClose" Source="{local:ImageResource closewindow.png}" HorizontalOptions="End" WidthRequest="32" HeightRequest="32" Grid.Column="2" />
+					<local:AppearingText TheText="Builder" HorizontalOptions="Center" Grid.Column="2" />
+					<Image x:Name="imgClose" Source="{local:ImageResource btn_c_previous.png}" HorizontalOptions="Start" WidthRequest="32" HeightRequest="32" />
 					<!-- 2nde ligne -->
 				</Grid>
 
@@ -31,7 +31,7 @@
 							<Image Source="{Binding CountryImage}" WidthRequest="50" Aspect="AspectFit" HorizontalOptions="EndAndExpand" />
 						</StackLayout>
 						<Image Source="{Binding PictureImage}" Aspect="AspectFit" WidthRequest="4000" HorizontalOptions="Center" />
-						<Label Text="{Binding Description}" LineBreakMode="WordWrap" FontSize="15" TextColor="White"/>
+						<Label Text="{Binding DescriptionLabel}" LineBreakMode="WordWrap" FontSize="15" TextColor="White"/>
 						<Label Text="Communication" FontSize="14" TextColor="Black" BackgroundColor="White" />
 						<Label Text="{Binding Communication}" LineBreakMode="WordWrap" FontSize="15" TextColor="White" />
 						<Label Text="Construction" FontSize="14" TextColor="Black" BackgroundColor="White" />
