optimise le carousel indicators

--- a/LaBuilderApp/Views/PageBuilder.xaml
+++ b/LaBuilderApp/Views/PageBuilder.xaml
@@ -104,7 +104,7 @@
 						    </cv:CarouselView.ItemTemplate>
 						  </cv:CarouselView>
 						
-						<local:CarouselIndicators Margin="0,-50,0,0" IndicatorHeight="16" IndicatorWidth="16" UnselectedIndicator="unselected_circle.png" SelectedIndicator="selected_circle.png" Position="{Binding AllPicturesPosition}" ItemsSource="{Binding AllPictures}" />
+						<local:CarouselIndicators x:Name="theCarouselIndicators" Margin="0,-50,0,0" IndicatorHeight="16" IndicatorWidth="16" UnselectedIndicator="unselected_circle.png" SelectedIndicator="selected_circle.png" Position="{Binding AllPicturesPosition}" ItemsSource="{Binding AllPictures}" />
 
 					<!-- change AllItemsSize in Builder if you change the height design -->
 						<ListView x:Name="lvExhibition" HeightRequest="{Binding AllGroupsAndItemsSize}" ItemsSource="{Binding Events}" HasUnevenRows="true" IsGroupingEnabled="true" BackgroundColor="Black" SeparatorVisibility="None" >
